# covid19analysismx

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  tasks.py
data/catalogs/: clasificacion_final_cat.csv  entidades_cat.csv  municipios_cat.csv  municipios_inegi_cat.csv  resultado_antigeno_cat.csv  resultado_lab_cat.csv  si_no_cat.csv
src/covid19analysismx/: __init__.py  cli.py  config.py  data.py  log.py
src/covid19mx/: __init__.py  cli.py  config.py  data.py
tests/: conftest.py  test_config.py  test_covid19mx.py  test_data.py
