[tool.poetry]
name = "covid19analysismx"
version = "0.1.0"
description = "Analysis of the COVID-19 pandemic in Mexico"
authors = ["Omar Abel Rodríguez-López <oarodriguez.mx@gmail.com>"]

packages = [
  { include = "covid19analysismx", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.7.1,<3.10"
importlib-metadata = { version = "^3.3.0", python = "<3.8" }
typing-extensions = "^3.7.4"
numpy = "^1.20.1"
scipy = "^1.6.1"
matplotlib = "^3.3.4"
numba = "^0.53.0"
pandas = "^1.2.3"
requests = "^2.25.1"
seaborn = "^0.11.1"
python-dotenv = "^0.15.0"
typer = "^0.3.2"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.6"
pytest = "^6.2.2"
jupyter = "^1.0.0"
jupyterlab = "^3.0.11"
black = "^20.8b1"
mypy = "^0.812"
flake8 = "^3.9.0"
pydocstyle = "^6.0.0"
isort = "^5.7.0"
jupyterlab-code-formatter = "^1.4.5"

[tool.poetry.scripts]
covid19analysismx = "covid19analysismx.cli:app"

[tool.black]
line-length = 79
target-version = ["py37", "py38"]

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 79
src_paths = ["src"]

[tool.pytest.ini_options]
addopts = "-s -vv -ra"
testpaths = ["tests"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
