[tool.poetry]
name = "covid19mx"
version = "2021.2.0.dev0"
description = "Analysis of the COVID-19 pandemic in Mexico"
authors = ["Omar Abel Rodríguez-López <oarodriguez.mx@gmail.com>"]

packages = [
  { include = "covid19mx", from = "src" },
]

[tool.poetry.dependencies]
python = ">=3.7.1,<3.10"
attrs = ">=20.3.0"
importlib-metadata = { version = ">=3.3.0", python = "<3.8" }
jupyter = { version = ">=1.0.0", optional = true }
jupyterlab = { version = ">=3.0.11", optional = true }
jupyterlab-code-formatter = { version = ">=1.4.5", optional = true }
jupytext = { version = ">=1.11.1", optional = true }
typing-extensions = ">=3.7.4"
click = ">=7.1.2"
numpy = ">=1.20.1"
scipy = ">=1.6.1"
matplotlib = ">=3.3.4"
numba = ">=0.53.0"
pandas = ">=1.2.4"
requests = ">=2.25.1"
seaborn = ">=0.11.1"
python-dotenv = ">=0.15.0"
responses = ">=0.13.2"
duckdb = ">=0.2.5, !=0.2.9"
xlrd = ">=2.0.1"
openpyxl = ">=3.0.7"
rich = ">=10.1.0"
streamlit = ">=0.89.0"

[tool.poetry.dev-dependencies]
autopep8 = ">=1.5.6"
pytest = ">=6.2.2"
black = ">=20.8b1"
mypy = ">=0.812"
flake8 = ">=3.9.0"
pydocstyle = ">=6.0.0"
isort = ">=5.7.0"
pytest-cov = ">=2.12.1"
pre-commit = ">=2.13.0"
rope = ">=0.18.0"

[tool.poetry.extras]
jupyter = ["jupyter", "jupyterlab", "jupyterlab-code-formatter", "jupytext"]

[tool.poetry.scripts]
covid19mx = "covid19mx.cli:app"

[tool.black]
line-length = 79
target-version = ["py37", "py38"]

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 79
src_paths = ["src"]

[tool.pytest.ini_options]
addopts = "-s -vv -ra"
testpaths = ["tests"]

[tool.coverage.paths]
source = ["src"]

[tool.coverage.run]
parallel = true
branch = true
source = ["covid19mx"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
  "pragma: no cover",
  "raise NotImplementedError",
]

[tool.coverage.html]
directory = "htmlcov"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
